[package]
name = "decaf377-ka-min"
version = "0.1.0"
edition = "2021"
description = "Key agreement over decaf377"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = ["decaf377/arkworks", "hex/std", "rand_core/std"]

[dependencies]
decaf377 = {git = "https://github.com/penumbra-zone/decaf377", rev = "04184f5704e40b388393c21c79155a1b4e80e353", default-features = false}
rand_core = {version = "0.6", default-features = false}
hex = {version = "0.4", default-features = false}
zeroize = "1.4"
zeroize_derive = "1.3"

[dev-dependencies]
proptest = "1"

# Create profile for running checks in CI that are mostly "release" mode,
# but also checking the `debug_assert `lines.
[profile.ci]
inherits = "release"
debug-assertions = true
